changes in index page

--- a/public/customjs/custom.css
+++ b/public/customjs/custom.css
@@ -36,5 +36,8 @@
 .post_description{ font-size:16px;}
 .margin_top_15{ margin-top:15px;}
 
+.padding20{ padding: 20px;}
+.fontsize20{font-size: 20px;;}
+
 
 
